[package]
name = "truthy"
version = "2.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Check if a value is \"truthy\""
readme = "README.md"
keywords = ["bool", "boolean", "truthy"]
categories = []
repository = "https://github.com/spenserblack/truthy-rs"
exclude = [
    ".editorconfig",
    ".github/*",
    ".gitignore",
    "CHANGELOG.md",
]
